--- a/Crime/app/src/main/AndroidManifest.xml
+++ b/Crime/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android_lessons.belkin.crime" >
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,9 +23,9 @@
             android:name=".CrimePagerActivity"
             android:label="@string/app_name" >
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
+        <activity android:name=".CrimeCameraActivity"
+                  android:screenOrientation="landscape"
+                  android:label="@string/app_name">
         </activity>
     </application>
 
